--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,7 +4,7 @@ name: Testing Package
 
 on:
   release:
-    types: [published, push, pull]
+    types: [push, pull]
 
 permissions:
   contents: read
@@ -19,12 +19,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requirements.txt
-    - name: Build package
-      run: python -m build
+    - name: Coverage report 
+      run: 
+        pip install coverage
+        coverage run manage.py test
+        coverage report
  
 
