--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,15 +3,17 @@
 name: Testing Package
 
 on:
-  release:
-    types: [push, pull]
-
+  push:
+    branches:
+     -master
+   pull_request:
+    branches:
+     -master
 permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
