--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,30 +1,30 @@
 name: Testing Django
 
-  on:
-    push:
-      branches:
-      - master
+on:
+  push
+    branches:
+    - master
 
 
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requirements.txt
-      - name: Coverage report 
-        run: 
-          pip install coverage
-          coverage run manage.py test
-          coverage report
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requirements.txt
+    - name: Coverage report 
+      run: 
+        pip install coverage
+        coverage run manage.py test
+        coverage report
   
 
