--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,10 +20,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Coverage report 
-      run: 
+      run: |
         pip install coverage
     -name: Coverage run
-      run: 
+      run: |
         coverage run manage.py test
         coverage report
   
