--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,6 +2,8 @@ name: Testing Django
 
 on:
   push
+    branches:
+    - master
 
 
 
@@ -16,14 +18,12 @@ jobs:
       with:
         python-version: 3.9
     - name: Install dependencies
-      run: |
+      run: 
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install requirements.txt
     - name: Coverage report 
-      run: |
+      run: 
         pip install coverage
-    -name: Coverage run
-      run: |
         coverage run manage.py test
         coverage report
   
