--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,7 +1,7 @@
 name: Testing Django
 
 on:
-  [push, pull]
+  push
 
 
 
@@ -11,16 +11,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: 3.9
     - name: Install dependencies
-      run: 
+      run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Coverage report 
-      run: 
+      run: |
         pip install coverage
         coverage run manage.py test
         coverage report
